Update UI a tiny little bit
- Enable "Help" button linking to the GitHub page.
- Remove "Settings" icon from database pages -> Will be moved to global "Settings".
- On "Sign-In", make the introduction text shorter by using tooltips instead.
- On "Stream Information", remove the web browser since there is limited support for animating it.

--- a/th.AdminibotModern/MainWindow.xaml
+++ b/th.AdminibotModern/MainWindow.xaml
@@ -41,6 +41,6 @@
     <mui:ModernWindow.TitleLinks>
         <mui:Link DisplayName="Home" Source="/Pages/Welcome/Home.xaml" />
         <mui:Link DisplayName="Settings" Source="/Pages/Settings/AdminibotSettings.xaml" />
-        <!-- <mui:Link DisplayName="Help" Source="http://mui.codeplex.com" /> -->
+        <mui:Link DisplayName="Help" Source="https://github.com/HuMothy/Adminibot" />
     </mui:ModernWindow.TitleLinks>
 </mui:ModernWindow>
