--- a/th.AdminibotModern/Pages/Stream/Information.xaml
+++ b/th.AdminibotModern/Pages/Stream/Information.xaml
@@ -7,24 +7,10 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid Style="{StaticResource ContentRoot}">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="2*"/>
-            <ColumnDefinition Width="6"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-
-        <ScrollViewer Margin="{StaticResource SplitLeft}">
-            <StackPanel>
-                <TextBlock Text="STREAM PREVIEW" Style="{StaticResource Heading2}" />
-                <mui:BBCodeBlock BBCode="View the stream player right from here to get a preview of your stream." Margin="0,0,0,32" />
-                <WebBrowser VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Visibility="Hidden"/>
-            </StackPanel>
-        </ScrollViewer>
-        <GridSplitter Grid.Column="1" />
-        <ScrollViewer Grid.Column="2 " Margin="{StaticResource SplitRight}">
+        <ScrollViewer>
             <StackPanel>
                 <TextBlock Text="STREAM INFORMATION" Style="{StaticResource Heading2}" />
-                <mui:BBCodeBlock BBCode="Some basic and advanced information about your stream to keep you updated on the stream's statistics." Margin="0,0,0,16" />
+                <mui:BBCodeBlock BBCode="Some basic and advanced information about your stream to keep you updated on the stream's statistics." Margin="0,0,0,32" />
             </StackPanel>
         </ScrollViewer>
     </Grid>
