--- a/th.AdminibotModern/Pages/Advanced/DatabaseManagement/Commands.xaml
+++ b/th.AdminibotModern/Pages/Advanced/DatabaseManagement/Commands.xaml
@@ -11,6 +11,7 @@
             <Grid>
                 <Grid.Resources>
                     <PathGeometry x:Key="FilterIcon">M6,13H18V11H6M3,6V8H21V6M10,18H14V16H10V18Z</PathGeometry>
+                    <PathGeometry x:Key="SearchIcon">M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z</PathGeometry>
                     <Style TargetType="mui:ModernButton">
                         <Setter Property="Margin" Value="0,0,8,0" />
                         <Setter Property="BorderThickness" Value="2" />
@@ -33,6 +34,7 @@
                 </StackPanel>
                 <StackPanel HorizontalAlignment="Right" Grid.Row="0" Grid.Column="1" Orientation="Horizontal" Margin="0,0,0,12">
                     <mui:ModernButton ToolTip="Filters" IconData="{StaticResource FilterIcon}" />
+                    <mui:ModernButton ToolTip="Search" IconData="{StaticResource SearchIcon}" />
                 </StackPanel>
                 <DataGrid Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2">
                     <DataGrid.Columns>
