--- a/th.AdminibotModern/Pages/Stream/Information.xaml
+++ b/th.AdminibotModern/Pages/Stream/Information.xaml
@@ -11,6 +11,12 @@
             <StackPanel>
                 <TextBlock Text="STREAM INFORMATION" Style="{StaticResource Heading2}" />
                 <mui:BBCodeBlock BBCode="Some basic and advanced information about your stream to keep you updated on the stream's statistics." Margin="0,0,0,32" />
+                <DataGrid AutoGenerateColumns="False" Name="streamInformationGrid" IsReadOnly="True" HeadersVisibility="Column" HorizontalAlignment="Left">
+                    <DataGrid.Columns >
+                        <DataGridTextColumn Header="Title" Binding="{Binding Path=streamInformationTitle}" MinWidth="50" />
+                        <DataGridTextColumn Header="Content" Binding="{Binding Path=streamInformationContent}" MinWidth="50" />
+                    </DataGrid.Columns>
+                </DataGrid>
             </StackPanel>
         </ScrollViewer>
     </Grid>
