--- a/th.AdminibotModern/Pages/Advanced/DatabaseManagement/Commands.xaml
+++ b/th.AdminibotModern/Pages/Advanced/DatabaseManagement/Commands.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="th.AdminibotModern.Pages.Database.CommandsDatabase"
+﻿<UserControl x:Class="th.AdminibotModern.Pages.Advanced.DatabaseManagement.CommandsDatabase"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
