--- a/th.AdminibotModern/Pages/Settings/AdminibotSettings.xaml
+++ b/th.AdminibotModern/Pages/Settings/AdminibotSettings.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="th.AdminibotModern.Pages.BotSettings"
+﻿<UserControl x:Class="th.AdminibotModern.Pages.Settings.BotSettings"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
