--- a/th.AdminibotModern/Pages/Settings/AdminibotSettings/Appearance.xaml
+++ b/th.AdminibotModern/Pages/Settings/AdminibotSettings/Appearance.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="th.AdminibotModern.Pages.Settings.Appearance"
+﻿<UserControl x:Class="th.AdminibotModern.Pages.Settings.AdminibotSettings.Appearance"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
