--- a/th.AdminibotModern/Pages/Stream/Information.xaml
+++ b/th.AdminibotModern/Pages/Stream/Information.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="th.AdminibotModern.Pages.StreamInfo"
+﻿<UserControl x:Class="th.AdminibotModern.Pages.Stream.StreamInfo"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -11,7 +11,7 @@
             <StackPanel>
                 <TextBlock Text="STREAM INFORMATION" Style="{StaticResource Heading2}" />
                 <mui:BBCodeBlock BBCode="Some basic and advanced information about your stream to keep you updated on the stream's statistics." Margin="0,0,0,32" />
-                <DataGrid AutoGenerateColumns="False" Name="streamInformationGrid" IsReadOnly="True" HeadersVisibility="Column" HorizontalAlignment="Left">
+                <DataGrid AutoGenerateColumns="False" Name="StreamInformationGrid" IsReadOnly="True" HeadersVisibility="Column" HorizontalAlignment="Left">
                     <DataGrid.Columns >
                         <DataGridTextColumn Header="Title" Binding="{Binding Path=streamInformationTitle}" MinWidth="50" />
                         <DataGridTextColumn Header="Content" Binding="{Binding Path=streamInformationContent}" MinWidth="50" />
