--- a/th.AdminibotModern/Pages/Welcome/Commands/Currency.xaml
+++ b/th.AdminibotModern/Pages/Welcome/Commands/Currency.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="th.AdminibotModern.Pages.Commands.Currency"
+﻿<UserControl x:Class="th.AdminibotModern.Pages.Welcome.Commands.Currency"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
