One small step for man...
Get the basic functionality and structure up, this includes all basic functions, most of the IrcClient and ChatClient stuff and data validation for the sign in form. More to come...

--- a/th.AdminibotModern/Pages/Connection/SignIn.xaml
+++ b/th.AdminibotModern/Pages/Connection/SignIn.xaml
@@ -1,9 +1,10 @@
-﻿<UserControl x:Class="th.AdminibotModern.Pages.Connection"
+﻿<UserControl x:Class="th.AdminibotModern.Pages.Connection.Connection"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:mui="http://firstfloorsoftware.com/ModernUI"
+             xmlns:connection="clr-namespace:th.AdminibotModern.Pages.Connection"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid Style="{StaticResource ContentRoot}">
@@ -14,6 +15,9 @@
                 <TextBlock Text="CREDENTIALS" Style="{StaticResource Heading2}" />
                 <mui:BBCodeBlock BBCode="In the form below, you'll need to enter the following details:&#13;&#10;• [B]Username[/B] - The Twitch username you want to bot to use.&#13;&#10;• [B]Token[/B] - A generated token that acts as your password. You can generate one by using the buttons below the form." Margin="0,0,0,16" />
                 <StackPanel Orientation="Vertical">
+                    <StackPanel.DataContext>
+                        <connection:SignInViewModel />
+                    </StackPanel.DataContext>
                     <StackPanel.Resources>
                         <Style TargetType="StackPanel">
                             <Setter Property="Orientation" Value="Horizontal" />
@@ -37,15 +41,15 @@
                     </StackPanel.Resources>
                     <StackPanel>
                         <Label>Username</Label>
-                        <TextBox />
+                        <TextBox Name="TxtUsername" Text="{Binding Username, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" />
                     </StackPanel>
                     <StackPanel>
                         <Label>Token</Label>
-                        <PasswordBox/>
+                        <PasswordBox Name="TxtPassword"/>
                     </StackPanel>
                     <StackPanel>
                         <Label />
-                        <CheckBox Content="Remember" IsChecked="True" ToolTip="Only leave this checked if you are on a private computer." />
+                        <CheckBox Name="ChkRememberLogin" Content="Remember" IsChecked="True" ToolTip="Only leave this checked if you are on a private computer." />
                     </StackPanel>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" Margin="0,0,0,32">
@@ -55,6 +59,9 @@
                 <TextBlock Text="TARGET" Style="{StaticResource Heading2}" />
                 <mui:BBCodeBlock BBCode="In the form below, you'll need to enter the target channel's Twitch username to connect to. It can be the same as the username used above. For example: If you want to connect to [I]Adminibot[/I]'s Twitch channel, you'd type in &quot;Adminibot&quot;." Margin="0,0,0,16" />
                 <StackPanel Orientation="Vertical" Margin="0,0,0,32">
+                    <StackPanel.DataContext>
+                        <connection:SignInViewModel />
+                    </StackPanel.DataContext>
                     <StackPanel.Resources>
                         <Style TargetType="StackPanel">
                             <Setter Property="Orientation" Value="Horizontal" />
@@ -74,16 +81,16 @@
                     </StackPanel.Resources>
                     <StackPanel>
                         <Label>Channel</Label>
-                        <TextBox />
+                        <TextBox Name="TxtChannel" Text="{Binding Channel, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" />
                     </StackPanel>
                     <StackPanel>
                         <Label />
-                        <CheckBox Content="Remember" IsChecked="True" ToolTip="Only leave this checked if you are on a private computer." />
+                        <CheckBox Name="ChkRememberChannel" Content="Remember" IsChecked="True" ToolTip="Only leave this checked if you are on a private computer." />
                     </StackPanel>
                 </StackPanel>
                 <TextBlock Text="CONNECT" Style="{StaticResource Heading2}" />
                 <mui:BBCodeBlock BBCode="Click the button below to connect the bot to Twitch. Please make sure that all necessary information is filled in." Margin="0,0,0,16" />
-                <Button Width="100" Content="Connect" HorizontalAlignment="Left" />
+                <Button Name="BtnConnect" Width="100" Content="Connect" HorizontalAlignment="Left" Click="BtnConnect_Click" />
             </StackPanel>
         </ScrollViewer>
     </Grid>
